# shipwreckers

./: Cargo.toml  asset_design_proto.md  readme.md
assets/configs/noise/: test.conf.ron  test.noise.json  test.noise.ron
src/: config.rs  main.rs  prelude.rs
src/assets/: mod.rs
src/camera/: mod.rs  movement.rs
src/config/: chunk.rs  mod.rs  noise.rs  tilemap.rs
src/editor/: config.rs  mod.rs  resource_configs.rs
src/game/: mod.rs  systems.rs
src/game/enemy/: mod.rs  systems.rs
src/game/entities/: mod.rs
src/game/entities/enemy/: mod.rs
src/game/entities/player/: components.rs  mod.rs  resources.rs  systems.rs
src/game/noise/: asset_loader.rs  constant_types.rs  mod.rs  nodes.old.rs  nodes.rs  noise-pseudo.md  noise_types.old.rs  resources.rs
src/game/noise/nodes/: combiners.rs  error.rs  generators.rs  mod.rs  modifiers.rs  transformers.rs
src/game/player/: mod.rs  systems.rs
src/game/terrain/: resources.rs
src/game/terrain/components/: mod.rs
src/game/terrain/systems/: mod.rs  terrain.rs
src/game/tilemap/: constants.rs  mod.rs
src/game/tilemap/components/: chunk.rs  mod.rs
src/game/tilemap/resources/: chunk_manager.rs  mod.rs  noise_generator.rs  tilemap.rs
src/game/tilemap/systems/: chunk.rs  mod.rs
src/game/world/: components.rs  entities.rs  events.rs  mod.rs  resources.old.rs  resources.rs  systems.rs  types.rs
src/game/world/components/: coordinates.rs  tile.rs
src/game/world/resources/: mod.rs  noise_generator.rs
src/game/world/tilemap/: mod.rs
src/helpers/: mod.rs
