[package]
name = "shipwreckers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
assert_matches = "1.4.0"

[dependencies]
bevy_asset_loader = { version = "0.17.0", features = ["2d"] }
bevy = "0.11.3"
rand = "0.8.5"
voronoice = "0.2.0"
noise = "0.8.0"
bevy-inspector-egui = "0.20.0"
bevy_editor_pls = "0.5.0"
bevy_ecs_tilemap = "0.11.1"
bevy-trait-query = "0.3.0"
serde = "1.0.189"
bevy_proto = "0.11.0"
iyes_progress = "0.9.1"
bevy_common_assets = { version = "0.7.0", features = ["ron"] }
libnoise = "0.1.0"
serde_json = "1.0.107"
assert_matches = "1.4.0"
anyhow = "1.0.75"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
